2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/src/schedulersimplesmpschedule.c: Fix bug in smp simple
	scheduler.

2011-08-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/nfsclient/src/nfs.c: Fixed creation of directories.

2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1855/cpukit
	* posix/src/psignal.c, posix/src/pthread.c, posix/src/pthreadjoin.c:
	Correct signal processing during pthread_join. We are supposed to
	unblock the thread waiting on a pthread_join(), dispatch the signal
	handler, account for it potentially overwriting errno, and then have
	the thread return to blocking within pthread_join().

2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1867/cpukit
	* posix/src/pthreadexit.c, posix/src/pthreadjoin.c: Correct
	implementation of pthread_exit() and pthread_join() to support the
	case where a thread is joinable but calls pthread_exit() before a
	thread has attempted to join.

2011-07-27	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* posix/src/pthread.c, posix/src/pthreadjoin.c: Revert accidental
	commit.

2011-07-27	Petr Benes <benesp16@fel.cvut.cz>

	PR 1856/cpukit
	* posix/src/pthread.c, posix/src/pthreadjoin.c,
	score/src/rbtreeextract.c: Do not derefence NULL.

2011-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ftpd/ftpd.c, libcsupport/src/geteuid.c, libcsupport/src/getgroups.c,
	libcsupport/src/getpgrp.c, libcsupport/src/getpid.c,
	libcsupport/src/getppid.c, libcsupport/src/setpgid.c,
	libcsupport/src/setsid.c, libcsupport/src/utsname.c,
	libmisc/stackchk/check.c, posix/include/rtems/posix/mqueue.h,
	posix/inline/rtems/posix/cond.inl,
	posix/inline/rtems/posix/mqueue.inl,
	posix/inline/rtems/posix/mutex.inl,
	posix/inline/rtems/posix/pthread.inl,
	posix/inline/rtems/posix/semaphore.inl,
	posix/inline/rtems/posix/timer.inl, posix/src/alarm.c,
	posix/src/barrierattrdestroy.c, posix/src/barrierattrgetpshared.c,
	posix/src/barrierattrinit.c, posix/src/barrierattrsetpshared.c,